	back compatibility.

	* main/Application/HtmlUrl.class.php,
	main/Application/RedirectUrl.class.php: helpers for views and
	controllers.

2008-03-31	Ivan Y. Khvostishkov

	* core/Form/Primitives/BasePrimitive.class.php: Assert::isArray() added
	to import()

	* main/EntityProto/Builders/ObjectToObjectCast.class.php: useful to
	cast one class to another.

2008-03-31	Konstantin V. Arkhipov

	* global.inc.php.tpl: added cache invalidation upon failed include
	from cached location; solves class moving case.

2008-03-29	Ivan Y. Khvostishkov

	* main/Net/HttpUrl.class.php: toHttpRequest() helper.

	* main/Application/: refactoring of ApplicationUrl. New classes:
	HttpRewriter, ApplicationRequestScope. Removed class:
	ScopeNavigationSchema (use rewriter instead).

2008-03-28	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php: now rotates
	queue upon overflow, it's the same strategy as in
	SharedMemorySegmentHandler.

2008-03-27	Konstantin V. Arkhipov

	* meta/builders/BusinessClassBuilder.class.php: building of custom
	create method implemented for childs of internal classes.

	* test/: now uses PHPUnit; good bye, SimpleTest.

	* core/Exceptions/SoapFault.class.php: fake exception added to prevent
	ClassNotFoundException in several cases.

	* core/Logic/BinaryExpression.class.php: add, substract, multiply and
	divide logic implemented in toBoolean().

	* main/Net/Http/HeaderUtils.class.php: redirect() removed, finally.

2008-03-26	Dmitry E. Demidov

	* main/Flow/HttpRequest.class.php: setFilesVar() added.

2008-03-25	Dmitry E. Demidov

	* main/Flow/HttpRequest.class.php: setByType() added.

2008-03-25	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: getArrayValue(), variety of
	getArrayVar().

	* core/Form/Primitives/PrimitiveTernary.class.php: getters for true and
	false values.

	* core/Exceptions/BadRequestException.class.php: new exception to be
	used instead of View('error').

2008-03-24	Ivan Y. Khvostishkov
